<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/frame_layout_style">


    <LinearLayout
        style="@style/frame_layout_style"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_title"
            style="@style/movie_title_style" />

        <LinearLayout style="@style/linear_parent_style">

            <ImageView
                android:id="@+id/movie_poster"
                style="@style/movie_poster" />

            <LinearLayout style="@style/linear_layout_parent">

                <LinearLayout style="@style/linear_parent_style">

                    <TextView
                        style="@style/release_date_style"
                        android:text="@string/release_date" />

                    <TextView
                        android:id="@+id/actual_release_date"
                        style="@style/actual_release_date_style" />

                </LinearLayout>

                <LinearLayout style="@style/linear_parent_style">

                    <TextView
                        style="@style/release_date_style"
                        android:text="@string/movie_rating" />

                    <TextView
                        android:id="@+id/actual_movie_rating"
                        style="@style/actual_release_date_style" />

                    <TextView
                        style="@style/actual_release_date_style"
                        android:text="@string/out_of_ten" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/movie_description"
            style="@style/overview_style" />

        <View style="@style/divider" />

        <TextView
            style="@style/trailer"
            android:text="@string/movie_trailer" />

        <ImageView
            android:id="@+id/play_icon"
            style="@style/play_icon"
            android:src="@drawable/play" />

        <View
            style="@style/divider"
            android:layout_marginBottom="24dp" />

        <LinearLayout style="@style/linear_parent_style">

            <Button
                android:id="@+id/review_button"
                style="@style/buttons"
                android:layout_marginRight="32dp"
                android:text="@string/movie_reviews" />

            <ToggleButton
                android:id="@+id/favorite_button"
                style="@style/buttons"
                android:textOff="@string/favorite_button"
                android:textOn="@string/added_favorite_button" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
